{
  "version": 4,
  "terraform_version": "1.3.1",
  "serial": 177,
  "lineage": "4e9ed9eb-29eb-de34-0dcb-3be50bcf2a16",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06e4dde6bcc60dc1d",
            "association_id": "eipassoc-035825b15507997d2",
            "domain": "vpc",
            "id": "eipalloc-06e4dde6bcc60dc1d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-084944eb22c559455",
            "private_dns": "ip-10-0-45-56.ec2.internal",
            "private_ip": "10.0.45.56",
            "public_dns": "ec2-52-6-200-187.compute-1.amazonaws.com",
            "public_ip": "52.6.200.187",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05753f53a656342c8",
            "association_id": "eipassoc-0747ccf0dc82a3c40",
            "domain": "vpc",
            "id": "eipalloc-05753f53a656342c8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-087d372dbef765b37",
            "private_dns": "ip-10-0-106-184.ec2.internal",
            "private_ip": "10.0.106.184",
            "public_dns": "ec2-34-234-133-179.compute-1.amazonaws.com",
            "public_ip": "34.234.133.179",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:670386094103:internet-gateway/igw-03f76cf7781316ca9",
            "id": "igw-03f76cf7781316ca9",
            "owner_id": "670386094103",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-095224a8e780c5933"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06e4dde6bcc60dc1d",
            "connectivity_type": "public",
            "id": "nat-04b67ecb310603a93",
            "network_interface_id": "eni-084944eb22c559455",
            "private_ip": "10.0.45.56",
            "public_ip": "52.6.200.187",
            "subnet_id": "subnet-054988ee4dd6d851b",
            "tags": {
              "Name": "NAT 1"
            },
            "tags_all": {
              "Name": "NAT 1"
            }
          },
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.main",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05753f53a656342c8",
            "connectivity_type": "public",
            "id": "nat-0cc0b9a1c5e778fdc",
            "network_interface_id": "eni-087d372dbef765b37",
            "private_ip": "10.0.106.184",
            "public_ip": "34.234.133.179",
            "subnet_id": "subnet-0c637035b2834e16a",
            "tags": {
              "Name": "NAT 2"
            },
            "tags_all": {
              "Name": "NAT 2"
            }
          },
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.main",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:670386094103:route-table/rtb-0fe63852d4d15bb0f",
            "id": "rtb-0fe63852d4d15bb0f",
            "owner_id": "670386094103",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-04b67ecb310603a93",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private1"
            },
            "tags_all": {
              "Name": "private1"
            },
            "timeouts": null,
            "vpc_id": "vpc-095224a8e780c5933"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.main",
            "aws_nat_gateway.gw1",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:670386094103:route-table/rtb-0c0d36bc6fafd3e5c",
            "id": "rtb-0c0d36bc6fafd3e5c",
            "owner_id": "670386094103",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0cc0b9a1c5e778fdc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private2"
            },
            "tags_all": {
              "Name": "private2"
            },
            "timeouts": null,
            "vpc_id": "vpc-095224a8e780c5933"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.main",
            "aws_nat_gateway.gw2",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:670386094103:route-table/rtb-0c049604e44d96079",
            "id": "rtb-0c049604e44d96079",
            "owner_id": "670386094103",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03f76cf7781316ca9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-095224a8e780c5933"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2d80aae52aa0c6b",
            "route_table_id": "rtb-0fe63852d4d15bb0f",
            "subnet_id": "subnet-0c980c1875c54fe64"
          },
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.main",
            "aws_nat_gateway.gw1",
            "aws_route_table.private1",
            "aws_subnet.private_1",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb27821f95f8aa39",
            "route_table_id": "rtb-0c0d36bc6fafd3e5c",
            "subnet_id": "subnet-0807466fcbbb09871"
          },
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.main",
            "aws_nat_gateway.gw2",
            "aws_route_table.private2",
            "aws_subnet.private_2",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e85fbd4e318478b4",
            "route_table_id": "rtb-0c049604e44d96079",
            "subnet_id": "subnet-054988ee4dd6d851b"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061ad407636619f3e",
            "route_table_id": "rtb-0c049604e44d96079",
            "subnet_id": "subnet-0c637035b2834e16a"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:670386094103:subnet/subnet-0c980c1875c54fe64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c980c1875c54fe64",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "670386094103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1a",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "private-us-east-1a",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-095224a8e780c5933"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:670386094103:subnet/subnet-0807466fcbbb09871",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0807466fcbbb09871",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "670386094103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1b",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "private-us-east-1b",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-095224a8e780c5933"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:670386094103:subnet/subnet-054988ee4dd6d851b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054988ee4dd6d851b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "670386094103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1a",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-us-east-1a",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-095224a8e780c5933"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:670386094103:subnet/subnet-0c637035b2834e16a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.96.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c637035b2834e16a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "670386094103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1b",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-us-east-1b",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-095224a8e780c5933"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:670386094103:vpc/vpc-095224a8e780c5933",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a265c952251780d2",
            "default_route_table_id": "rtb-0eb75aa17e1733759",
            "default_security_group_id": "sg-06b5804ef64e75c66",
            "dhcp_options_id": "dopt-0af8619cc83174f56",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-095224a8e780c5933",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eb75aa17e1733759",
            "owner_id": "670386094103",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}